samples/learningOverview/invalid/R1.dita
<?xml version="1.0" encoding="UTF-8"?>
<wrongRootElement>
  <title>Some Title</title>
</wrongRootElement>